--- a/cats99/app/views/cats/edit.html.erb
+++ b/cats99/app/views/cats/edit.html.erb
@@ -1,33 +1,3 @@
+<h1> EDITING CAT </h1>
 
-<form class="" action=" <%= cat_url %> " method="post">
-  <input type="hidden" name="_method" value="patch">
-  <label for="name"> Name <br>
-    <input class="name" type="text" name="cat[name]" value="<%= @cat.name %>">
-  </label>
-  <br>
-  <label for="birth_date"> Birth Date <br>
-    <input class="birth_date" type="date" name="cat[birth_date]" value="<%= @cat.birth_date %>">
-  </label>
-  <br>
-  <label for="sex"> Sex <br>
-    <input class="sex" type="radio" name="cat[sex]" value="M"> Male
-    <input class="sex" type="radio" name="cat[sex]" value="F"> Female
-  </label>
-  <br>
-  <label for="color"> Color <br>
-    <select class="color" name="cat[color]" value="<%= @cat.color %>">
-      <option value="white"> white </option>
-      <option value="black"> black </option>
-      <option value="yellow"> yellow </option>
-    </select>
-  </label>
-  <br><br>
-  <label for="description"> Description
-    <br>
-    <textarea name="cat[description]" rows="8" cols="80">
-      <%= @cat.description %>
-    </textarea>
-  </label>
-  <br>
-  <input type="submit" value="Create Cat">
-</form>
+<%= render 'form', cat: @cat, action: :edit %>
